--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			  src="https://code.jquery.com/jquery-3.5.1.min.js"
 			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="/static/chess.js"></script>
+    <script src="/static/chess_es6.js"></script>
     <style>
       table{
           margin: auto;
