--- a/index.html
+++ b/index.html
@@ -2,59 +2,102 @@
 <html>
   <head>
     <script
-			  src="https://code.jquery.com/jquery-3.5.1.min.js"
-			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
     <script src="/static/chessCommonJS.js"></script>
     <script src="/static/chessClient.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <style>
-      table{
-          margin: auto;
-      }
-      .highlight{
-        background-color: coral!important;
-      }
-      td{
-          height: 60px;
-          width: 60px;
-          text-align: center;
-          font-size: 48px;
-          cursor: pointer;
-      }
-      .light-cell{
-          background-color: lightblue;
-      }
-      .dark-cell{
-          background-color: grey;
-      }
-      .selected{
-          background-color:orange;
-      }
+        body{
+            text-align: center;
+        }
+        table{
+            margin: auto;
+        }
+        .highlight{
+            background-color: coral!important;
+        }
+        td{
+            height: 60px;
+            width: 60px;
+            text-align: center;
+            font-size: 48px;
+            cursor: pointer;
+        }
+        .light-cell{
+            background-color: lightblue;
+        }
+        .dark-cell{
+            background-color: grey;
+        }
+        .selected{
+            background-color:orange;
+        }
+        h2{
+            font-size: 48px;
+            text-align: center;
+            font-family: 'Courier New', Courier, monospace;
+            color: black;
+        }
+        .deactive{
+            display: none;
+        }
     </style>
     <title></title>
   </head>
   <body>
+    <h2 id="player"></h2>
     <div id="board">
 
     </div>
+    <div id="welcome" class="deactive">
+        <h2>Chess</h2>
+        <button onclick="createRoom()">Create Game</button><br/><br/>
+        <input type="text" placeholder="Game ID" name="gameId"/>
+        <button onclick="joinRoom($('input[name=gameId]').val())">Join Game</button>
+    </div>
+    <div id="waiting" class="deactive">
+        <h2>Waiting for a player</h2>
+        <p>
+            The Room Id is: <span id="roomId"></span>
+        </p>
+    </div>
     <script>
         let socket = io();
+
+        function setPlayer(){
+            $("h2").css("display", "block");
+            if(Players.white == board.player)
+                $("#player").text("White's turn to Move");
+            else
+                $("#player").text("Black's turn to Move");
+        }
+
+        function prepForGame(){
+            $("#welcome").addClass("deactive");
+            $("#waiting").addClass("deactive");
+        }
+
+        function setBoardState(fen){
+            board = new Board(fen);
+            postMove(Players);
+            setPlayer();
+        }
         socket.on("getGameId", function(gameId){
             sessionStorage.setItem("gameId", gameId);
-            console.log(gameId);
+            $("#roomId").text(gameId);
+            setWaitingRoom();
         });
 
         socket.on("startGame", (fen) => {
-            console.log(fen);
-            board = new Board(fen);
-            postMove();
+            setBoardState(fen);
+            prepForGame();
+            $("title").html("Chess");
         });
 
         socket.on("boardUpdated", (fen) => {
-            console.log(fen);
-            board = new Board(fen);
-            postMove();
+            setBoardState(fen);
             if(board.player == sessionStorage.getItem("player"))
                 alert("Your Turn");
         });
@@ -67,15 +110,16 @@
                 alert("You\'re playing as black");
         });
 
+        socket.on("reJoinSuccess", () => {setBoardState(fen);prepForGame();});
+
         socket.on("playerJoined", () => alert("A Player has joined"));
 
         socket.on("invalidMove", () => alert("That move isn\'t allowed"));
 
-        socket.on("invalidRoomId", (silent) => {
-            if(!silent)
-                alert("Invalid Room Id");
+        socket.on("invalidRoomId", () => {
+            alert("Invalid Room Id");
         });
-        
+
         $("#board").delegate("td", "click", function(){
             processClick(socket, this.id);
         });
@@ -85,13 +129,23 @@
         }
 
         function joinRoom(id){
+            console.log(id);
             socket.emit("roomJoin", id);
+        }
+
+        function setWaitingRoom(){
+            $("#welcome").addClass("deactive");
+            $("#waiting").removeClass("deactive");
+            $("title").html("Waiting for a room");
         }
 
         $(document).ready(function(){
             let roomId = sessionStorage.getItem("gameId");
             if(roomId)
-                socket.emit("roomJoin", roomId, true);
+                socket.emit("reJoin", roomId);
+            
+            $("#welcome").removeClass("deactive");
+            $("title").html("Start a game | Join a game");
         })
       </script>
   </body>
