--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="/static/chessCommonJS.js"></script>
+    <script src="/static/chessBrowserJS.js"></script>
     <script src="/static/chessClient.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <style>
